--- a/namada-masp-dashboard/src/index.css
+++ b/namada-masp-dashboard/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply text-lightText bg-lightBg;
+    /* Default dark mode styles */
+  }
+
+  /* Override styles when light mode is active */
+  html.dark body {
+    @apply text-darkText bg-darkBg;
+  }
+}
